--- a/suswg_env.yaml
+++ b/suswg_env.yaml
@@ -1,146 +1,4 @@
-name: suswg
-channels:
-  - anaconda
-  - conda-forge
-  - defaults
-dependencies:
-  - attrs=23.2.0=pyh71513ae_0
-  - blas=1.0=mkl
-  - blosc=1.21.3=hcec6c5f_0
-  - boost-cpp=1.78.0=h2f2b2fd_4
-  - bottleneck=1.3.7=py312h32608ca_0
-  - brotli=1.0.9=h6c40b1e_8
-  - brotli-bin=1.0.9=h6c40b1e_8
-  - brotli-python=1.0.9=py312hcec6c5f_8
-  - bzip2=1.0.8=h6c40b1e_6
-  - c-ares=1.28.1=h10d778d_0
-  - ca-certificates=2024.3.11=hecd8cb5_0
-  - cairo=1.16.0=h3ce6f7e_5
-  - certifi=2024.2.2=py312hecd8cb5_0
-  - cffi=1.16.0=py312h6c40b1e_1
-  - cfitsio=3.470=h01dc385_7
-  - charset-normalizer=2.0.4=pyhd3eb1b0_0
-  - click=8.1.7=unix_pyh707e725_0
-  - click-plugins=1.1.1=py_0
-  - cligj=0.7.2=pyhd8ed1ab_1
-  - contourpy=1.2.0=py312ha357a0b_0
-  - cryptography=42.0.5=py312h30e54ef_1
-  - cycler=0.11.0=pyhd3eb1b0_0
-  - expat=2.6.2=hcec6c5f_0
-  - fiona=1.9.5=py312he282a81_0
-  - fontconfig=2.14.2=h5bb23bf_0
-  - fonttools=4.51.0=py312h6c40b1e_0
-  - freetype=2.12.1=hd8bbffd_0
-  - freexl=2.0.0=h3ec172f_0
-  - gdal=3.6.2=py312hfe88152_4
-  - geopandas=0.9.0=pyhd8ed1ab_0
-  - geos=3.8.0=hb1e8313_0
-  - geotiff=1.7.0=hf6ff7a4_3
-  - gettext=0.21.0=he85b6c0_1
-  - giflib=5.2.2=h10d778d_0
-  - glib=2.78.4=hcec6c5f_0
-  - glib-tools=2.78.4=hcec6c5f_0
-  - hdf4=4.2.13=h39711bb_2
-  - hdf5=1.12.1=nompi_h0aa1fa2_104
-  - icu=73.2=hf5e326d_0
-  - idna=3.7=py312hecd8cb5_0
-  - intel-openmp=2023.1.0=ha357a0b_43548
-  - jpeg=9e=h6c40b1e_1
-  - json-c=0.16=h01d06f9_0
-  - kealib=1.5.0=h72c422f_1
-  - kiwisolver=1.4.4=py312hcec6c5f_0
-  - krb5=1.20.1=h049b76e_0
-  - lcms2=2.12=hf1fd2bf_0
-  - lerc=3.0=he9d5cce_0
-  - libbrotlicommon=1.0.9=h6c40b1e_8
-  - libbrotlidec=1.0.9=h6c40b1e_8
-  - libbrotlienc=1.0.9=h6c40b1e_8
-  - libcurl=8.7.1=hf20ceda_0
-  - libcxx=14.0.6=h9765a3e_0
-  - libdeflate=1.17=hb664fd8_1
-  - libedit=3.1.20191231=h0678c8f_2
-  - libev=4.33=h10d778d_2
-  - libexpat=2.6.2=h73e2aa4_0
-  - libffi=3.4.4=hecd8cb5_1
-  - libgdal=3.6.2=h8be97c6_4
-  - libgfortran=5.0.0=13_2_0_h97931a8_3
-  - libgfortran5=13.2.0=h2873a65_3
-  - libglib=2.78.4=h19e1a8f_0
-  - libiconv=1.17=hd75f5a5_2
-  - libkml=1.3.0=haeb80ef_1015
-  - libnetcdf=4.8.1=h9f5a9a2_4
-  - libnghttp2=1.57.0=h9beae6a_0
-  - libpng=1.6.39=h6c40b1e_0
-  - libpq=12.17=h04015c4_0
-  - libspatialindex=1.9.3=he49afe7_4
-  - libspatialite=5.1.0=h0f56581_0
-  - libsqlite=3.45.3=h92b6c6a_0
-  - libssh2=1.11.0=hd019ec5_0
-  - libtiff=4.5.1=hcec6c5f_0
-  - libwebp-base=1.3.2=h6c40b1e_0
-  - libxml2=2.10.4=h45904e2_2
-  - libzip=1.10.1=hc158999_3
-  - libzlib=1.2.13=h87427d6_6
-  - llvm-openmp=18.1.6=h15ab845_0
-  - lz4-c=1.9.4=hcec6c5f_1
-  - matplotlib=3.8.4=py312hb401068_2
-  - matplotlib-base=3.8.4=py312h7f12edd_0
-  - minizip=4.0.3=h79ad51c_0
-  - mkl=2023.1.0=h8e150cf_43560
-  - mkl-service=2.4.0=py312h6c40b1e_1
-  - mkl_fft=1.3.8=py312h6c40b1e_0
-  - mkl_random=1.2.4=py312ha357a0b_0
-  - ncurses=6.5=h5846eda_0
-  - nspr=4.35=hea0b92c_0
-  - nss=3.89.1=hcec6c5f_0
-  - numexpr=2.8.7=py312hac873b0_0
-  - numpy=1.26.4=py312hac873b0_0
-  - numpy-base=1.26.4=py312h6f81483_0
-  - openjpeg=2.4.0=h66ea3da_0
-  - openssl=3.3.1=h87427d6_0
-  - packaging=23.2=py312hecd8cb5_0
-  - pandas=2.1.1=py312he282a81_0
-  - pcre2=10.42=h0ad2156_0
-  - pillow=10.3.0=py312h6c40b1e_0
-  - pip=24.0=py312hecd8cb5_0
-  - pixman=0.40.0=h9ed2024_1
-  - poppler=22.12.0=ha8a1649_3
-  - poppler-data=0.4.12=hd8ed1ab_0
-  - proj=9.3.1=h1972728_0
-  - pycparser=2.21=pyhd3eb1b0_0
-  - pyopenssl=24.0.0=py312hecd8cb5_0
-  - pyparsing=3.0.9=py312hecd8cb5_0
-  - pyproj=3.6.1=py312h14d93e9_5
-  - pysocks=1.7.1=py312hecd8cb5_0
-  - python=3.12.3=h1411813_0_cpython
-  - python-dateutil=2.9.0post0=py312hecd8cb5_2
-  - python-tzdata=2023.3=pyhd3eb1b0_0
-  - python_abi=3.12=4_cp312
-  - pytz=2024.1=py312hecd8cb5_0
-  - qhull=2020.2=h940c156_2
-  - readline=8.2=hca72f7f_0
-  - requests=2.31.0=py312hecd8cb5_0
-  - rtree=1.2.0=py312h8974cf7_0
-  - setuptools=69.5.1=py312hecd8cb5_0
-  - shapely=2.0.1=py312h9b3e53f_1
-  - six=1.16.0=pyhd3eb1b0_1
-  - sqlite=3.45.3=h6c40b1e_0
-  - tbb=2021.8.0=ha357a0b_0
-  - tiledb=2.3.3=h1b93210_3
-  - tk=8.6.14=h4d00af3_0
-  - tornado=6.3.3=py312h6c40b1e_0
-  - tzdata=2024a=h04d1e81_0
-  - unicodedata2=15.1.0=py312h6c40b1e_0
-  - urllib3=1.26.18=py312hecd8cb5_0
-  - wheel=0.43.0=py312hecd8cb5_0
-  - xerces-c=3.2.4=hcec6c5f_1
-  - xz=5.4.6=h6c40b1e_1
-  - zlib=1.2.13=h87427d6_6
-  - zstd=1.5.5=hc035e20_2
-  - pip:
-      - basemap==1.4.1
-      - basemap-data==1.3.2
-      - et-xmlfile==1.1.0
-      - openpyxl==3.1.3
-      - pyshp==2.3.1
-prefix: /Users/au728490/opt/anaconda3/envs/suswg
+
+...saving history...
+...saving history...
+...saving history...truncating history files...
